...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/GoalTypeFrame"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_fragment_corners"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/GoalTypeItem"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="4dp"
                        android:backgroundTint="@color/white"
...

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/GoalAppFrame"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_fragment_corners"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/GoalAppItem"
                        android:layout_width="280dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="4dp"
                        android:backgroundTint="@color/white"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GoalAppFrame" />


            <Button
                android:id="@+id/blackButton"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/black_button_background"
                android:text="Atšaukti"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yellowButton" />
...
