...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_layout_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
...
                    android:layout_weight="3"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/categoryButton"
                    android:layout_width="0dp"
                    android:layout_height="29dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/round_button_background"
                    android:text="Sukurti nauja"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <FrameLayout
...
