...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phoneName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="38dp"
                android:layout_marginRight="27dp"
                android:text="Mano telefonas"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameofScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="26dp"
                android:layout_marginRight="27dp"
                android:text="Pagrindinis"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneName" />

            <LinearLayout
                android:id="@+id/linear_layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="27dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameofScreen">

                <Button
                    android:id="@+id/yellowButton"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_background"
                    android:text="Statistika"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/blackButton"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_button_background"
                    android:text="Programėlių blokavimas"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <FrameLayout
...
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/categoriesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="27dp"
                android:text="Šiandienos statistika"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/framesContainer" />

            <FrameLayout
                android:id="@+id/appTimeStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_fragment_corners"
...

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/appUnlockStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="27dp"
                android:layout_marginBottom="16dp"
...
